@@ -290,6 +290,10 @@ Anton Balashov <sicness at darklogic dot ru>
 .br
 Kirill Dmitrenko <kdmitrenko at gmail dot com>
 .br
+.B CMakeLists.txt and Windows support:
+.br
+Yves Quemener
+.br
 .B Manpage:
 .br
 Anton Balashov <sicness at darklogic dot ru>
